# rustcraft

./: Cargo.toml  LICENSE-MIT  README.md
assets/: settings.toml
assets/shaders/: default.frag  default.vert  water.wgsl  world.wgsl
examples/: erosion_dump.rs
resources/: settings.toml
resources/shaders/: default.frag  default.vert
src/: block.rs  input.rs  lib.rs  main.rs  math.rs  player.rs  settings.rs  shapes.rs  world.rs
src/chunks/: chunk.rs  chunk_loader.rs  material.rs  mod.rs
src/chunks/generate/: erosion.rs  generator.rs  mod.rs  noise.rs  region.rs  region_store.rs
src/new_world/: chunk.rs  mod.rs  octree.rs  world.rs
src/new_world/generate/: generator.rs  mod.rs  noise.rs
src/render/: camera.rs  culling.rs  material.rs  mesh.rs  mod.rs  primitives.rs  renderer.rs  shader.rs  shaders.rs  texture.rs
src/render/geometry/: mod.rs  primitives.rs
src/render/mesh/: mod.rs  primitives.rs
src/render/model/: mod.rs  primitives.rs
src/render/v2/: material.rs  mesh.rs  mod.rs  primitives.rs  renderer.rs
src/util/: mod.rs  octree.rs  primitives.rs
src/world/: block.rs  components.rs  generator.rs  mod.rs  systems.rs
src/world/chunks/: chunk.rs  chunk_loader.rs
src/world/chunks/generate/: generator.rs
src/world/ecs/: bounds.rs  camera.rs  chunk_loader.rs  mod.rs  physics.rs  player.rs
